--- a/src/index.css
+++ b/src/index.css
@@ -43,8 +43,10 @@ body,
   html,
   body,
   #root {
-    height: auto;
-    overflow: auto;
+    height: auto !important;
+    min-height: 100%;
+    overflow-y: auto !important;
+    overflow-x: hidden;
   }
 }
 
